create table
  public.categorias (
    id bigint generated by default as identity not null,
    created_at timestamp
    with
      time zone not null default now (),
      nombre text not null,
      constraint categorias_pkey primary key (id)
  ) TABLESPACE pg_default;

create table
  public.productos (
    id bigint generated by default as identity not null,
    created_at timestamp
    with
      time zone not null default now (),
      nombre text null,
      precio double precision null,
      peso double precision null,
      id_cat bigint null,
      constraint productos_pkey primary key (id),
      constraint productos_id_cat_fkey foreign KEY (id_cat) references categorias (id) on update CASCADE on delete set null
  ) TABLESPACE pg_default;

create table
  public.inventario (
    id_prod bigint not null,
    created_at timestamp
    with
      time zone not null default now (),
      cantidad bigint null default 0,
      constraint inventario_pkey primary key (id_prod),
      constraint inventario_id_prod_fkey foreign KEY (id_prod) references productos (id) on delete CASCADE,
      constraint inventario_cantidad_check check ((cantidad >= 0))
  ) TABLESPACE pg_default;

-- Create an ENUM for roles to avoid typos
create type user_role as enum ('cliente', 'administrador');

create table
  public.perfiles (
    id uuid references auth.users on delete cascade not null primary key,
    nombre text not null,
    apellido text not null,
    correo text unique not null, -- Syncs with auth.users email
    rol user_role default 'cliente',
    direccion text,
    telefono text,
    created_at timestamp
    with
      time zone default now ()
  );

create table
  public.carrito (
    id bigint generated by default as identity primary key,
    usuario_id uuid references public.perfiles (id) on delete cascade not null,
    producto_id bigint references public.productos (id) on delete cascade not null,
    cantidad int not null default 1 check (cantidad > 0),
    created_at timestamp
    with
      time zone default now (),
      -- Prevents duplicate rows for the same product in a user's cart
      constraint unique_usuario_producto unique (usuario_id, producto_id)
  );

-- Header of the order
create table
  public.pedidos (
    id bigint generated by default as identity primary key,
    usuario_id uuid references public.perfiles (id) on delete set null,
    total double precision not null default 0,
    estado text default 'pendiente', -- e.g., 'pendiente', 'pagado', 'cancelado'
    fecha_pedido timestamp
    with
      time zone default now ()
  );

-- Lines of the order (Historical data)
create table
  public.pedido_detalles (
    id bigint generated by default as identity primary key,
    pedido_id bigint references public.pedidos (id) on delete cascade,
    producto_id bigint references public.productos (id) on delete set null,
    cantidad int not null,
    precio_unitario_historico double precision not null -- Price at the time of purchase
  );

INSERT INTO
  public.perfiles (
    id,
    nombre,
    apellido,
    correo,
    rol,
    direccion,
    telefono
  )
VALUES
  (
    'c0e5551a-a1b3-461f-a706-a20f25dbefe7',
    'Saúl',
    'Gonzáles',
    'saul.gonzales@minimarket.com',
    'vendedor', -- Adjusted role based on email domain
    'Av. Central 123, San José',
    '8888-1111'
  ),
  (
    '37ed7c18-4131-413f-b835-6cca22255fe0',
    'David',
    'Calderón',
    'david.calderon2@minimarket.com',
    'vendedor',
    'Calle 5, Heredia',
    '8888-2222'
  ),
  (
    '4ba9fa91-d751-41eb-9ccc-88aac104ee13',
    'Allan',
    'Brito',
    'allan.brito@cliente.com',
    'cliente',
    'Barrio Luján, San José',
    '8888-3333'
  ),
  (
    '022cad58-baf0-416c-9e03-69ba71558937',
    'Lola',
    'Mento',
    'lola.mento@cliente.com',
    'cliente',
    'Residencial Los Álamos, Cartago',
    '8888-4444'
  );

  