erDiagram
  CATEGORIAS ||--o{ PRODUCTOS : "id_cat"
  PRODUCTOS  ||--o|  INVENTARIO : "id_prod"
  PERFILES   ||--o{ CARRITO : "usuario_id"
  PRODUCTOS  ||--o{ CARRITO : "producto_id"
  PERFILES   ||--o{ FAVORITOS : "usuario_id"
  PRODUCTOS  ||--o{ FAVORITOS : "producto_id"

  CATEGORIAS {
    bigint id PK
    timestamptz created_at
    text nombre
  }

  PRODUCTOS {
    bigint id PK
    timestamptz created_at
    text nombre
    double precision precio
    double precision peso
    bigint id_cat FK
  }

  INVENTARIO {
    bigint id_prod PK
    timestamptz created_at
    bigint cantidad
  }

  PERFILES {
    uuid id PK
    text nombre
    text apellido
    text correo "UNIQUE"
    user_role rol
    text direccion
    text telefono
    timestamptz created_at
  }

  CARRITO {
    bigint id PK
    uuid usuario_id FK
    bigint producto_id FK
    integer cantidad
    timestamptz created_at
  }

  FAVORITOS {
    bigint id PK
    uuid usuario_id FK
    bigint producto_id FK
    timestamptz created_at
  }